--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,5 @@
-1. 
-2. Do postprocessing on Q&A responses. (e.g. if answer just has A: ..., remove the invalid answer and question)
+1. Set element id's to the file-hash name, fixes: 01_-_Introduction_to_Web_Development
+2. Post-process Q&A sets, (e.g. replace [NEWLINE] with \n)
+2. Drag and drop upload
+3. Have files upload asynchronously in the background instead of what we got currently.
+4. Do postprocessing on Q&A responses. (e.g. if answer just has A: ..., remove the invalid answer and question)
