--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-1. Fix bug where convert button appears if we upload another file while others are still processing.
+1. Handle duplicate uploads (PREVENT THEM!!!)
 2. Drag and drop upload
 3. Post-process Q&A sets, (e.g. replace [NEWLINE] with \n) - Do postprocessing on Q&A responses. (e.g. if answer just has A: ..., remove the invalid answer and question)
