Redirect 404 pages to home

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,5 @@
-1. Figure out how to get unstructured.io to read images into text - quickly...
+0. Expandable/Closeable <div> for each generated PDF & it's Q&A set.
+1. Store previously generated PDFs in a cookie, give user ability to view them.
+2. Export option after Q&A generation.
+3. CSS/HTML Indication when user hovers file over the upload area.
+*. Figure out how to get unstructured.io to read images into text - quickly...
