--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
-0. Give testers ability to view logs on the website.
+0. Current GPT prompt allows for Q&A to be too large. Specify that the questions and answers should be brief/short?
+0. Cursor flickers when we upload a file in the file explorer.
 0. Bio ch8 slides - oxidation & reduction should have been included in Q&A set.
 0. Expandable/Closeable <div> for each generated PDF & it's Q&A set.
 1. Store previously generated PDFs in a cookie, give user ability to view them.
