Implement flashcard feature for documents

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 * DECEMBER *
 1. Have front end display flashcards like quizlet, with Q&A sets under it.
 2. Modify PDF output such that Q&A sets are in the shape of a flashcard, and support double sided printing where answers are on the back.
+2. Give title to PDF export tab.
 3. Implement keyword: definition feature. ** Implement tests? E.g. Q&A results should result in even number of lines > 0.
 4. Improve Q&A flashcard output, e.g. duplicate questions, ect.
 5. Implement export to cheatsheet feature (For keyword: definition feature)
