--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 * DECEMBER * (Improve output, Export features, User Accounts)
-0. ch7_sql q1 doesn't add A) True B) False to the question section.???? ---- Sometimes GPT classifies T/F question as multiple choice: Change it.
+0. Handle errors when we restart server while users are converting files.
 1. Tell user what error they get for files
 2. Tell users progress % instead of just simple loading bar.
 2. Give title to PDF export tab.
