--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 * DECEMBER * (Improve output, Export features, User Accounts)
+0. Edgecase: Remove any questions, flashcards that reference table x.x
+0. Edgecase: Remove '-' at beginning of keyword for keyword/definition generation (look at ch1 keyword pair)
 0. Handle errors when we restart server while users are converting files.
 1. Tell user what error they get for files
 2. Give title to PDF export tab.
