--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,14 @@
 * ASAP *
+- Limit guest & free users to 3, 10 pages respectively. 
+- Display cost of uploaded files for paid accounts before the convert them.
 - Payment processing
+- Confirm email prompt
 - Save uploaded files w/ user account in DB.
 - Determine how much OpenAI API costs
+- Before processing document with ai, determine the document style on the first page and apply unique prompts per each style.
+    * For example, we might have a document with a lot of Foo: Bar, Word: Definition text. We change the prompt to improve output.
+    * Another example is if there are existing test questions/answers and we are generating a test/quiz from pdf. Change the prompt...
+    * 
 
 
 
