--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 * ASAP *
-- Display usage to user in the profile page.
 - Display cost of uploaded files for paid accounts before converting
 - Payment processing
 - Confirm email prompt
@@ -9,7 +8,15 @@
     * For example, we might have a document with a lot of Foo: Bar, Word: Definition text. We change the prompt to improve output.
     * Another example is if there are existing test questions/answers and we are generating a test/quiz from pdf. Change the prompt...
     * 
+- When removing files from upload area, remove them from our cookies if added.
 - Google ads.
+
+*** Improve output via. re-processing ***
+- Handle edgecases where answer is just dots (e.g. What is drought? | ...) 
+    Have GPT re-process these
+- Handle edgecases where question or answer output is about XXX characters
+- Make ch1-ppt output better (e.g. What are the key security concepts? | - Confidentiality) Is just one value.
+    Have GPT understand the dashes better.
 
 
 * ??? - Need to reproduce *
