Correct the MAX_CONTENT LENGTH value

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 * ASAP *
+- Test payments on production
 - Don't have convert button appear if other files are still uploading
 - Google adsense
 - Google ad compaign: Hire some dude off fiverr and make the following images
